# brd-tasks-desktop

./: .env.example  .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  state.rs  utils.rs
src/components/Analytics/: Analytics.css  Analytics.tsx
src/components/Avatar/: Avatar.css  Avatar.tsx
src/components/Compact/: CompactView.css  CompactView.tsx
src/components/Header/: Header.css  Header.tsx
src/components/LoginForm/: LoginForm.css  LoginForm.tsx
src/components/NotificationToast/: NotificationToast.css  NotificationToast.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/TaskCard/: TaskCard.css  TaskCard.tsx
src/components/TaskDetail/: TaskDetail.css  TaskDetail.tsx
src/components/TaskInput/: TaskInput.css  TaskInput.tsx
src/components/TaskList/: TaskList.css  TaskList.tsx
src/components/Tooltip/: Tooltip.css  Tooltip.tsx
src/contexts/: AuthContext.tsx  NotificationContext.tsx
src/hooks/: useAuth.ts  useNotification.ts  useSound.ts  useTasks.ts  useUpdate.ts
src/services/: api.ts  auth.ts  sounds.ts  sync.ts  taskCache.ts
src/styles/: global.css
src/types/: analytics.ts  api.ts  auth.ts  index.ts
src/utils/: time.ts
