[package]
name = "brd-tasks-desktop"
version = "0.2.5"
description = "Ephemeral task manager - tasks auto-delete after 24h"
authors = ["breadriuss"]
edition = "2021"

[lib]
name = "brd_tasks_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
